Better handling of links inside text. New method: processForLinks(String, boolean, int).